[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "unfollowcheck"
version = "1.0.0"
description = "Identify unfollowers on Instagram."
authors = ["Minjoon Kim <mg7441081@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
instaloader = "*"
streamlit = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
instaloader = "*"
ruff = "*"
streamlit = "*"
